--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
   <section>
     <h2>Contacto</h2>
-    <form class="contact-form" action="https://formspree.io/f/{xpwrvnbr}" method="POST">
+    <form class="contact-form" action="https://formspree.io/f/xpwrvnbr" method="POST">
       <input type="text" name="nombre" placeholder="Tu nombre" required />
       <input type="email" name="email" placeholder="Tu correo electrónico" required />
       <textarea name="mensaje" rows="5" placeholder="¿Cómo puedo ayudarte?" required></textarea>
