--- a/index.html
+++ b/index.html
@@ -5,18 +5,82 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>RPP Estudio - Creación de Contenido</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #f4f4f4; color: #333; }
-    header { background: #1a1a1a; color: #fff; padding: 2rem; text-align: center; }
-    header h1 { margin: 0; font-size: 2.5rem; }
-    header p { font-size: 1.2rem; margin-top: 0.5rem; }
-    section { padding: 2rem 10%; background: #fff; margin-bottom: 1rem; }
-    h2 { color: #1a1a1a; }
-    .services ul { list-style: none; padding-left: 0; }
-    .services li { margin-bottom: 1rem; background: #f0f0f0; padding: 1rem; border-left: 5px solid #1a1a1a; }
-    .contact-form { display: flex; flex-direction: column; max-width: 500px; margin: auto; }
-    .contact-form input, .contact-form textarea { margin-bottom: 1rem; padding: 0.8rem; border: 1px solid #ccc; border-radius: 5px; }
-    .contact-form button { background: #1a1a1a; color: white; padding: 1rem; border: none; cursor: pointer; }
-    .footer { text-align: center; padding: 1rem; font-size: 0.9rem; background: #eaeaea; }
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f4f4f4;
+      color: #333;
+    }
+
+    header {
+      background: #1a1a1a;
+      color: #fff;
+      padding: 2rem;
+      text-align: center;
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 2.5rem;
+    }
+
+    header p {
+      font-size: 1.2rem;
+      margin-top: 0.5rem;
+    }
+
+    section {
+      padding: 2rem 10%;
+      background: #fff;
+      margin-bottom: 1rem;
+    }
+
+    h2 {
+      color: #1a1a1a;
+    }
+
+    .services ul {
+      list-style: none;
+      padding-left: 0;
+    }
+
+    .services li {
+      margin-bottom: 1rem;
+      background: #f0f0f0;
+      padding: 1rem;
+      border-left: 5px solid #1a1a1a;
+    }
+
+    .contact-form {
+      display: flex;
+      flex-direction: column;
+      max-width: 500px;
+      margin: auto;
+    }
+
+    .contact-form input,
+    .contact-form textarea {
+      margin-bottom: 1rem;
+      padding: 0.8rem;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+    }
+
+    .contact-form button {
+      background: #1a1a1a;
+      color: white;
+      padding: 1rem;
+      border: none;
+      cursor: pointer;
+    }
+
+    .footer {
+      text-align: center;
+      padding: 1rem;
+      font-size: 0.9rem;
+      background: #eaeaea;
+    }
   </style>
 </head>
 <body>
@@ -48,6 +112,9 @@
       <input type="text" name="nombre" placeholder="Tu nombre" required />
       <input type="email" name="email" placeholder="Tu correo electrónico" required />
       <textarea name="mensaje" rows="5" placeholder="¿Cómo puedo ayudarte?" required></textarea>
+      <!-- Mejora: desactiva CAPTCHA y redirige después del envío -->
+      <input type="hidden" name="_captcha" value="false" />
+      <input type="hidden" name="_next" value="https://rfrf335.github.io/rpp-estduio/gracias.html" />
       <button type="submit">Enviar mensaje</button>
     </form>
   </section>
